refactor: use java text blocks - Community ()